--- a/stile.css
+++ b/stile.css
@@ -1,7 +1,18 @@
+@import url("style/header.cSS");
+@import url("style/banner. css");
+@import url("style/carrossel.css");
+
+
 :root {
    --cor-de-fundo: #EBECEE;
+   --branco: #FFFFFF;
+   --azul-degrade: linear-gradient(97.54deg, #002F52 35.49%, #326589 165.37%);
+   --fonte-principal: "Poppins"
 }
 
 body {
     background-color:var(--cor-de-fundo);
+    font-family: var(--fonte-principal);
+    font-size: 16px;
+    font-weight: 400;
 }               
